--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ cmake-build-*/
 
 # IntelliJ
 out/
-
+target/
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
@@ -100,7 +100,7 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
+*.iml
 # modules.xml
 # .idea/misc.xml
 # *.ipr
