--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,15 @@
     <java.version>1.8</java.version>
     <swagger.version>2.9.2</swagger.version>
     <hibernate.validator.version>6.1.5.Final</hibernate.validator.version>
+    <apache.collections.version>4.1</apache.collections.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>${apache.collections.version}</version>
+    </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
